<resources>
    <string name="app_name">mytaxi demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- MainActivity -->
    <string name="text_hint_driver">Search driver here</string>

    <!-- MenuItems -->
    <string name="text_item_title_logout">Logout</string>

    <!-- DriverProfileActivity -->
    <string name="title_activity_driver_profile">Driver Profile</string>

    <!-- AuthenticationActivity -->

    <!--declared new string for handling blank username and  blank password scenarios-->

    <string name="title_activity_authentication">Login</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="button_login">Login</string>
    <string name="message_login_fail">Login failed </string>

    <string name="blank_username">Username can not be blank</string>
    <string name="blank_password">Password can not be blank</string>
    <string name="blank_username_password">Enter valid Username and Password.</string>


</resources>
